update to remove bad files

--- a/VE_Builder/Utilities/gui/Makefile
+++ b/VE_Builder/Utilities/gui/Makefile
@@ -28,7 +28,7 @@ DEBUG_APP?= TRUE
 
 EXTRA_CFLAGS+= 
 
-EXTRA_CXXFLAGS+=${WX_CXX} -DVTK_USE_ANSI_STDLIB
+EXTRA_CXXFLAGS+=${WX_CXX} 
 
 #EXTRA_DEFS+= -DSJK_TEST
 
