corrected filename misspelling and added svn date and revision to header

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -140,7 +140,7 @@ SRCS=\
    cfdSteadyStateVizHandler.cxx \
    cfdTransientVizHandler.cxx \
    cfdEnvironmentHandler.cxx \
-   cfdModelHandeler.cxx \
+   cfdModelHandler.cxx \
    cfdSoundHandler.cxx \
    cfdPfSceneManagement.cxx 
 
