created a directory for documentation

--- a/VE_Installer/omniORB4.cfg
+++ b/VE_Installer/omniORB4.cfg
@@ -261,6 +261,7 @@ abortOnInternalError = 0
 #
 #   The default for the set of initial references is empty.
 InitRef = NameService=corbaname::vracs001:2810
+#InitRef = NameService=corbaname::vracs001:2818
 
 ############################################################################
 # DefaultInitRef
