separated test code from class code

--- a/VE_Builder/Translator/ansys/Makefile
+++ b/VE_Builder/Translator/ansys/Makefile
@@ -6,7 +6,7 @@ all:
 
 srcdir= .
 
-SRCS= ansysReader.cpp fileIO.cxx
+SRCS= ansysReader.cpp fileIO.cxx test.cpp
 
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR= $(CFDHOSTTYPE)
