--- a/futuregen/Framework/WinClient.vcproj
+++ b/futuregen/Framework/WinClient.vcproj
@@ -83,7 +83,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../Plugin;./;../VE_UI/;&quot;$(WX_WIDGETS)\include&quot;;&quot;$(WX_WIDGETS)\lib\msw&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;"
+				AdditionalIncludeDirectories="../Plugin;./;../VE_UI/;&quot;$(WX_WIDGETS)\include&quot;;&quot;$(WX_WIDGETS)\lib\msw&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\skel&quot;;&quot;$(VE_SUITE_HOME)\futurgen\IDL&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL"
 				IgnoreStandardIncludePath="FALSE"
 				BasicRuntimeChecks="3"
@@ -301,12 +301,24 @@
 			</File>
 			<File
 				RelativePath=".\OrbThread.cpp">
+				<FileConfiguration
+					Name="Debug|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						AdditionalIncludeDirectories="..\IDL"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\Plugin\package.cpp">
 			</File>
 			<File
 				RelativePath=".\paraThread.cpp">
+				<FileConfiguration
+					Name="Debug|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						AdditionalIncludeDirectories="..\IDL"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\Plugin\Plugin_base.cpp">
@@ -435,27 +447,13 @@
 				RelativePath="..\Plugin\TextResultDialog.cpp">
 			</File>
 			<File
-				RelativePath="..\VE_UI\UI_DataSetTab.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
+				RelativePath="..\Ve_ui\UI_DataSetPanel.cpp">
 			</File>
 			<File
 				RelativePath="..\Ve_ui\UI_DesignParTab.cpp">
+			</File>
+			<File
+				RelativePath="..\Ve_ui\UI_Frame.cpp">
 			</File>
 			<File
 				RelativePath="..\VE_UI\UI_GeometryTab.cpp">
@@ -512,26 +510,6 @@
 						Name="VCCLCompilerTool"
 						Optimization="0"
 						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_ScalarTab.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
 						PreprocessorDefinitions=""
 						BasicRuntimeChecks="3"
 						BrowseInformation="1"/>
@@ -760,10 +738,13 @@
 				RelativePath="..\Plugin\TextResultDialog.h">
 			</File>
 			<File
-				RelativePath="..\VE_UI\UI_DataSetTab.h">
+				RelativePath="..\Ve_ui\UI_DataSetPanel.h">
 			</File>
 			<File
 				RelativePath="..\Ve_ui\UI_DesignParTab.h">
+			</File>
+			<File
+				RelativePath="..\Ve_ui\UI_Frame.h">
 			</File>
 			<File
 				RelativePath="..\VE_UI\UI_GeometryTab.h">
@@ -773,9 +754,6 @@
 			</File>
 			<File
 				RelativePath="..\VE_UI\UI_NavTab.h">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_ScalarTab.h">
 			</File>
 			<File
 				RelativePath="..\VE_UI\UI_SoundsTab.h">
